--- a/weather/src/components/FormInput/FormInput.scss
+++ b/weather/src/components/FormInput/FormInput.scss
@@ -1,25 +1,25 @@
 @mixin shrinkLabel {
-    top: -14px;
-    font-size: 12px;
+    top: 35px;
+    font-size: 10px;
 }
 
 .group {
     position: relative;
-    margin: 45px 0;
+    margin: 10px 10px;
+    margin-left: 0;
 
     .form-input {
         background: none;
         background-color: transparent;
-        font-size: 18px;
-        padding: 10px 10px 10px 5px;
+        font-size: 14px;
+        padding: 5px 10px 5px 5px;
         display: block;
         width: 100%;
         border: none;
         border-radius: 0;
         border-bottom: 1px solid white;
-        margin: 25px 0;
-
-
+        margin: 5px 0;
+        color: var(--font-color);
 
         &:focus {
             outline: none;
@@ -28,10 +28,10 @@
         &:focus~.form-input-label {
             @include shrinkLabel();
         }
-    }
 
-    input[type='password'] {
-        letter-spacing: 0.3em;
+        &input[value] {
+            margin-left: 50px;
+        }
     }
 
     .form-input-label {
