--- a/weather/src/components/Spinner/Spinner.scss
+++ b/weather/src/components/Spinner/Spinner.scss
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-top: 50%;
 
     .brand {
         position: static;
